--- a/index.html
+++ b/index.html
@@ -5,11 +5,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Portfolio</title>
     <link rel="shortcut icon" href="#" type="image/x-icon">
+    <!-- Box Icons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- Custom CSS -->
      <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <!-- Logo do site -->
+        <a href="#" class="logo">Portfolio</a>
+        <!-- Menu -->
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#service">Service</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+        </nav>
+    </header>
+    <!-- home section -->
+     <section class="home" id="home">
+        <div class="home-content">
+            <h3>Buenas, I'm</h3>
+            <h1>Lucas Bonny</h1>
+            <h3>Full-Stack <span>Developer</span> and <span>Student</span></h3>
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia commodi minima eum! Error quas, saepe, odio voluptatibus fuga voluptatem officia illo quo unde, natus numquam beatae pariatur! Vero voluptatibus minus nam eos magnam! Delectus, illum? Neque iure repellendus commodi, iusto modi pariatur, dolorum libero unde ea obcaecati necessitatibus aliquid animi?
+            </p>
+
+            <div class="social-media">
+                <a href="#"><i class='bx bxl-facebook'></i></a>
+                <a href="#"><i class='bx bxl-instagram'></i></a>
+                <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                <a href="#"><i class='bx bxl-twitter' ></i></a>
+            </div>
+
+            <div>
+                <a href="#" class="btn">Download CV</a>
+            </div>
+        </div>
+
+        <div class="home-img">
+            <img src="img/profile.png" alt="profile picture">
+        </div>
+     </section>
+     <!-- /home section -->
+
+     <!-- service section -->
+     <section class="services" id="services">
+        <h2>Our <span>Services</span></h2>
+
+        <div class="services-container">
+            <div class="services-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Web Development</h3>
+
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur voluptatibus earum, aliquid omnis rem nihil delectus nam quaerat a facere totam alias neque fugit fuga iusto! Quos cum ab, minima tenetur porro in non magnam corporis eum sequi perferendis, autem beatae aperiam. Quidem perspiciatis odio aut consequuntur, ad dolorum molestiae.
+                </p>
+
+                <a href="#" class="btn">Read More</a>
+            </div>
+            <div class="services-box">
+                <i class='bx bx-code-curly' ></i>
+                <h3>Back-End Development</h3>
+
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur voluptatibus earum, aliquid omnis rem nihil delectus nam quaerat a facere totam alias neque fugit fuga iusto! Quos cum ab, minima tenetur porro in non magnam corporis eum sequi perferendis, autem beatae aperiam. Quidem perspiciatis odio aut consequuntur, ad dolorum molestiae.
+                </p>
+
+                <a href="#" class="btn">Read More</a>
+            </div>
+            <div class="services-box">
+                <i class='bx bx-mobile-alt' ></i>
+                <h3>Mobile Development</h3>
+
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur voluptatibus earum, aliquid omnis rem nihil delectus nam quaerat a facere totam alias neque fugit fuga iusto! Quos cum ab, minima tenetur porro in non magnam corporis eum sequi perferendis, autem beatae aperiam. Quidem perspiciatis odio aut consequuntur, ad dolorum molestiae.
+                </p>
+
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+     </section>
+     <!-- /service section -->
     <script src="js/script.js"></script>
 </body>
 </html>
