About and footer created

--- a/index.html
+++ b/index.html
@@ -198,6 +198,25 @@
      </section>
      <!-- /contact section -->
 
+     <!-- about section -->
+     <section class="about" id="about">
+        <div class="about-img">
+            <img src="img/profile.png" alt="About Me">
+        </div>
+        <div class="about-content">
+            <h3>About Me</h3>
+            <h1>Full Stack <span>Developer</span> and <span>Student</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe numquam ipsa animi velit assumenda, ullam vitae hic laudantium rem id quibusdam distinctio illo, incidunt suscipit nobis reiciendis beatae laborum itaque.</p>
+            <a href="#" class="btn">Read More</a>
+        </div>
+     </section>
+     <!-- /about section -->
+
+     <!-- footer section -->
+      <footer>
+        <p>Copyright &copy; 2024 by &lt;Lucas Bonny&gt;. All Rights Reserved.</p>
+      </footer>
+
     <script src="js/script.js"></script>
 </body>
 </html>
