--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Menu -->
         <nav>
             <a href="#home">Home</a>
-            <a href="#service">Service</a>
+            <a href="#services">Service</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
             <a href="#about">About</a>
@@ -217,6 +217,6 @@
         <p>Copyright &copy; 2024 by &lt;Lucas Bonny&gt;. All Rights Reserved.</p>
       </footer>
 
-    <script src="js/script.js"></script>
+    <!-- <script src="js/script.js"></script> -->
 </body>
 </html>
